--- a/tutorials-in-development/R/release-provisional.Rmd
+++ b/tutorials-in-development/R/release-provisional.Rmd
@@ -79,6 +79,10 @@ install.packages("neonUtilities")
 # load packages
 library(neonUtilities)
 
+# set working directory
+# modify for your computer
+setwd("~/data")
+
 ```
 
 ```{r libraries, include=FALSE}
@@ -105,7 +109,7 @@ PAR, DP1.00066.001. Expand the data availability chart by clicking on
 View By: SITE.
 
 What you see will probably not look exactly like this, but similar. This is 
-a screenshot from January 2024; more data and possibly more Release may have 
+a screenshot from January 2024; more data and possibly more Releases may have 
 been published by the time you follow this tutorial.
 
 <figure>
@@ -114,8 +118,8 @@ been published by the time you follow this tutorial.
 </figure>
 
 Here we can consult the key and see that data up to June 2023 are in a Release 
-and data collected since June 2023 are Provisional. There are no 2024 data 
-available yet. 
+(solid boxes) and data collected since June 2023 are Provisional (hatched 
+boxes). There are no 2024 data available yet (pale grey boxes). 
 
 Now click on the Product Details button to go to the <a href="https://data.neonscience.org/data-products/DP1.00066.001" target="_blank">DP1.00066.001</a> web page.
 
@@ -130,129 +134,80 @@ citation information for publications using these data.
 Note that the citation guidance is different for Provisional and Released 
 data. The Release citation includes a direct link to a DOI. Since Provisional 
 data are subject to change without notice, the data you download today may not 
-match data you download tomorrow. Because of this, the recommended workflow is 
-to archive the version of Provisional data you used in your analyses, and 
-provide a DOI to that archived version for citation. Guidance in doing this is 
-available on the <a href="https://www.neonscience.org/data-samples/guidelines-policies/publishing-research-outputs" target="_blank">Publishing Research Outputs</a> web page.
+exactly match data you download tomorrow. Because of this, the recommended 
+workflow is to archive the version of Provisional data you used in your 
+analyses, and provide a DOI to that archived version for citation. Guidance in 
+doing this is available on the <a href="https://www.neonscience.org/data-samples/guidelines-policies/publishing-research-outputs" target="_blank">Publishing Research Outputs</a> web page.
 
+## Downloading data
 
+### Latest and provisional
 
-If you're not familiar with the `neonUtilities` package and how to use 
+Go back to the main Explore Data Products page and click on Download Data. 
+Select BARR (Utquiagvik) and BONA (Caribou Creek) for the year of 2023. 
+Click Next.
+
+<figure>
+	<a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/include-provisional-menu.png">
+	<img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/include-provisional-menu.png" alt="Radio buttons to select whether to include or exclude Provisional data from download."></a>
+</figure>
+
+This page in the download process asks whether you want to download 
+provisional data. By default it is set to Exclude, and will only download 
+data from the latest Release.
+
+### Download by Release
+
+But let's say you don't want the most recently updated data. You're replicating 
+a colleague's analysis, and want to download the precise version of data they 
+used. In that case, you need to download the Release they used.
+
+Go back to the Explore Data Products page, and select the Release you need from 
+the Release menu on the lefthand bar. For this example, let's use 
+RELEASE-2023.
+
+<figure>
+	<a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/release-2023-menu.png">
+	<img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/release-2023-menu.png" alt="RELEASE-2023 selected in explore data products menu."></a>
+</figure>
+
+Now, in the data availability chart, we can see there are no hatched boxes, 
+since we've selected only data that are in a Release. And data availability 
+extends only through June 2022, the end date for sensor data in RELEASE-2023.
+
+<figure>
+	<a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/release-2023-availability.png">
+	<img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/release-provisional/release-2023-availability.png" alt="Data availability chart for PAR quantum line in RELEASE-2023."></a>
+</figure>
+
+## Downloading data using neonUtilities
+
+NEON data can also be downloaded in R, using the `neonUtilities` package. If 
+you're not familiar with the `neonUtilities` package and how to use 
 it to access NEON data, we recommend you follow the <a href="https://www.neonscience.org/resources/learning-hub/tutorials/download-explore-neon-data" target="_blank">Download and Explore NEON Data</a> 
-tutorial as well.
+tutorial as well as this one, for a more complete introduction.
+
+Let's download the same data we selected on the Data Portal above: BARR and 
+BONA, January 2023 - December 2023.
 
 ``` {r load-data, results="hide"}
 
-veg <- loadByProduct(dpID="DP1.10098.001", 
-                     site="RMNP", 
-                     release="RELEASE-2022",
-                     check.size=F)
-
-rpt <- loadByProduct(dpID="DP1.10064.002",
-                     release="RELEASE-2022",
+qpr <- loadByProduct(dpID="DP1.00066.001", 
+                     site=c("BARR", "BONA"),
+                     startdate="2023-01",
+                     enddate="2023-12",
                      check.size=F)
 
 ```
 
-## Find Related Samples
+Next sections: 
+Provisional data excluded
+How to include provisional data
+Look, provisional data are no different
+Data management:
+Understand which functions download data fresh each time and which don't
+See cheat sheet
+Think about which behavior you want
+Recommendations for saving data
 
-Of course both of these datasets contain many samples. Let's check out 
-the tagged plant with `individualID = NEON.PLA.D10.RMNP.03623`.
-
-``` {r view-vst}
-
-veg$vst_mappingandtagging[which(veg$vst_mappingandtagging$individualID==
-                                  "NEON.PLA.D10.RMNP.03623"),]
-
-```
-
-We see from the data that this is a quaking aspen (Populus tremuloides). 
-Now use the `getSampleTree()` function from the `neonOS` package to find 
-all samples related to this particular sample.
-
-``` {r query-taggedPlant}
-
-potr.samp <- getSampleTree("NEON.PLA.D10.RMNP.03623")
-
-```
-
-Let's take a look at the table this function returns:
-
-``` {r view-potr}
-
-potr.samp
-
-```
-
-There are 10 columns. The first 5 are:
-
-* sampleUuid: Unique identifier for the sample in the NEON database
-* sampleTag: Identifier for the sample. Frequently human-readable, may be non-unique across sampleClasses.
-* barcode: Identifier in scannable barcode on the sample. Unique within NEON.
-* archiveGuid: Globally unique identifier for an archived sample.
-* sampleClass: Category or type of sample. Used within NEON to classify samples at different levels in the hierarchy, and define expectations for sample handling.
-
-For each row, we describe the sample identified in these 5 columns as the 
-focal sample. The next 5 columns contain the same identifiers and 
-descriptors, but for the parent sample of the focal sample on each row. Note 
-that each parent sample identified in the table will also be a focal sample 
-in at least one row.
-
-Because samples can have multiple parents, and parents can have multiple 
-children, there may be rows with the sample focal sample but different 
-parents, and rows with different focal samples but the same parents. In 
-the case of the sample hierarchy for `NEON.PLA.D10.RMNP.03623`, most of 
-the samples are children of the sample with barcode A00000125509. This is 
-a foliar sample, which is taken from the tree and then split into 
-subsamples for various analyses.
-
-It's usually much easier to understand these relationships visually than in 
-a table. The parent-child relationships create a 
-<a href="https://en.wikipedia.org/wiki/Directed_acyclic_graph" target="_blank">directed acyclic graph</a>, and there are many tools available for viewing such graphs. Here, 
-we'll use the `visNetwork` package.
-
-To be understood by the `visNetwork` package, we need to define the "nodes" 
-and "edges" of the graph - that is, the samples and their relationships.
-
-``` {r plant-network}
-
-potr.samp$id <- potr.samp$sampleUuid
-
-edges <- potr.samp[,c("sampleUuid","parentSampleUuid")]
-colnames(edges) <- c("to", "from")
-
-visNetwork(nodes=potr.samp,
-           edges=edges) %>%
-  visEdges(arrows="to")
-
-```
-
-This graph displays the relationships, but we don't know which sample 
-is which. It helps to add the sampleClass as a label:
-
-``` {r plant-network-with-labels}
-
-potr.samp$label <- potr.samp$sampleClass
-
-visNetwork(nodes=potr.samp,
-           edges=edges) %>%
-  visNodes(shape="ellipse", font=list(size=10)) %>%
-  visEdges(arrows="to")
-
-```
-
-Now we have a clearer picture. There is one sample with no parents, in 
-the class `taggedPlant`. Referring back to the table, we can see this is 
-the tree itself, that we initially queried, `NEON.PLA.D10.RMNP.03623`. It 
-has two children, one of which is the foliar sample that has many 
-subsamples (children) of its own. If you're familiar with the Foliar traits 
-data product (DP1.10026.001), you'll be able to identify these subsamples 
-easily, as the samples for analysis of lignin, carbon and nitrogen, etc.
-
-There is also one sample with a class label indicating archive, and we can 
-see in the table that it has an `archiveGuid` identifier. You can look up 
-this sample at the NEON Biorepository, where it is stored: 
-<a href="https://biorepo.neonscience.org/portal/collections/individual/index.php?occid=737499&clid=0" target="_blank">barcode A00000134072</a>
-
-TO DO: Example from rodent pathogens? How to conclude? How should people use this info?
 
