fix reference to file at end, don't show all entries in h5ls

--- a/tutorials/R/AOP/Hyperspectral/Plot-Hyperspectral-Spectra/Plot-Hyperspectral-Spectra.Rmd
+++ b/tutorials/R/AOP/Hyperspectral/Plot-Hyperspectral-Spectra/Plot-Hyperspectral-Spectra.Rmd
@@ -95,7 +95,7 @@ Now we can read in the file and look at the contents using `h5ls`. You can move 
 h5_file <- paste0(wd,"DP3.30006.001/neon-aop-products/2021/FullSite/D17/2021_SJER_5/L3/Spectrometer/Reflectance/NEON_D17_SJER_DP3_257000_4112000_reflectance.h5")
 
 # look at the HDF5 file structure 
-h5ls(h5_file,all=T) 
+h5ls(h5_file) #optionally specify all=True if you want to see all of the information
 ```
 
 
@@ -137,7 +137,7 @@ Then, we can pull the spatial attributes that we'll need to adjust the reflectan
 ```{r pull-scale-factor }
 
 # grab scale factor from the Reflectance attributes
-reflectanceAttr <- h5readAttributes(f,"/SJER/Reflectance/Reflectance_Data" )
+reflectanceAttr <- h5readAttributes(h5_file,"/SJER/Reflectance/Reflectance_Data" )
 
 scaleFact <- reflectanceAttr$Scale_Factor
 
